# functional-shell

./: .travis.yml  CHANGELOG.md  COOKBOOK.md  LICENSE  Makefile  README.md  benchmark.sh  filter  install.sh  it-test-setup.sh  main.sh  map  map.sh  pyproject.toml  update-sha256.sh
.github/workflows/: ci.yaml  release.yml
cmd/: filter  map
docs/: installation.md  shell-completion.md
docs/development/: architecture.md  contributing.md  testing.md
docs/reference/: operations.md
docs/usage/: basic-usage.md
fs/: filter  map
fs/functions/: _filter  _map  filter  map
fs/operations/: comparison  file_and_dir  logical  string
functions/: filter  map
lib/: lib
lib/core/functions/: _filter  _map
lib/operations/: arithmetic  file_and_dir  other  string
ops/: arithmetic  comparison  file_and_dir  logical  other  string
packaging/debian/: README.md  changelog  control  copyright  rules
packaging/homebrew/: README.md  functional-shell.rb
scripts/: uninstall.sh
scripts/completion/: bash_completion  zsh_completion
tests/: arithmetic.bats  comparison.bats  file_and_dir.bats  fixture.bash  logical.bats  other.bats  string.bats  test.bats
tests/integration-tests/: main.py  tests.py
tests/resources/: symlink
